style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

body{
    background-color: #1F2937;
    margin: 0;
    min-height: 100vh;
    font-family: Roboto, sans-serif;
}

img{
    max-width: 75%;
    max-height: 75%;
}

.small-image {
    width: 80px;
    height: 80px;
}

.header{
    display: flex;
    justify-content: space-between;
    background-color: #1F2937;
    padding-bottom: 50px;
    margin: 0%;
    width: 100%;
}

li {
    margin-top: auto;
}

ul {
    display: flex;
    list-style: none;
    margin: 10px;
    padding: 10px;
    gap: 20px;
    font-size: 18px;
}

a {
    text-decoration: none;
    color: #E5E7EB;
}

.left-items {
    display: flex;
    font-size: 24px;
    font-weight: 900;
    color: #F9FAf8;
    margin: 0% 10%;
}

.right-items{
    display: flex;
    margin: 0% 10%;
}

.first-section {
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
}

.left-section{
    display: flex;
    flex-direction: column;
    flex-basis: 100%;
    color: #F9FAf8;
    margin: 0% 10%;
    justify-content: center;

}

.right-section {
    display: flex;
    flex-basis: 100%;
    justify-content: center;
    align-items: center;
    margin: 0% 10%;
}

.hero {
    font-size: 48px;
    font-weight: bold;
    margin-bottom: 0;
}

.container {
    width: 100%;
    /*margin: 0% 10%;*/
    display: flex;
    flex-direction: column;
}

button {
    background-color: #3882F6;
    color: white;
    border-radius: 8px;
    width: 100px;
    height: 30px;
    font-weight: bold;
}

.second-section {
    background-color: white;
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.second-section-container{
    margin: 0% 10%;
}

.second-section-container {
    display: flex;
    flex-wrap: wrap;
    gap: 32px;
  }
  
.card {
    padding: 16px;
    width: 300px;
  }

.cardSquare {
    border: 5px solid #1F2937;
    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
    border-radius: 10px;
}

